--- a/prestamos.html
+++ b/prestamos.html
@@ -17,8 +17,11 @@
           <li><a href="index.html">Resumen</a></li>
           <li><a href="depositos.html">Depósitos</a></li>
           <li><a href="solicitudes.html">Solicitudes</a></li>
-          <li><a href="prestamos.html">Prestamos</a></li>
-          
+          <li><a href="prestamos.html">Préstamos</a></li>
+          <li><a href="calculadora.html">Calculadora</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+        
         </ul>
       </nav>
     </div>
