--- a/solicitudes.html
+++ b/solicitudes.html
@@ -17,7 +17,10 @@
           <li><a href="depositos.html">Depósitos</a></li>
           <li><a href="solicitudes.html">Solicitudes</a></li>
           <li><a href="prestamos.html">Préstamos</a></li>
-          
+          <li><a href="calculadora.html">Calculadora</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+        
         </ul>
       </nav>
     </div>
@@ -57,6 +60,6 @@
     </table>
   </div>
 
-  <script src="solicitudes.js"></script>
+  <script src="solicitudes2.js"></script>
 </body>
 </html>
