--- a/depositos.html
+++ b/depositos.html
@@ -19,6 +19,7 @@
           <li><a href="solicitudes.html">Solicitudes</a></li>
           <li><a href="prestamos.html">Préstamos</a></li>
           <li><a href="calculadora.html">Calculadora</a></li>
+          <li><a href="documentacion.html">Documentacion</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
