--- a/index.html
+++ b/index.html
@@ -1,51 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sly - Inicio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="menu-toggle" id="menu-btn">☰</div>
-    <div class="sidebar" id="sidebar">
-      <div class="close-btn" id="close-btn">×</div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Resumen</a></li>
-          <li><a href="depositos.html">Depósitos</a></li>
-          <li><a href="solicitudes.html">Solicitudes</a></li>
-          <li><a href="prestamos.html">Préstamos</a></li>
-          <li><a href="calculadora.html">Calculadora</a></li>
-          <li><a href="documentacion.html">Documentacion</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-        </ul>
-      </nav>
-    </div>
-    <h1>Sly</h1>
-    <p></p>
-  </header>
-
-  <main>
-    <h2 class="a">Resumen</h2>
-    <table id="tabla-resumen">
-      <thead>
-        <tr>
-          <th>Miembro</th>
-          <th>Capital</th>
-          <th>Interés</th>
-          <th>Total</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Los datos se llenarán automáticamente -->
-      </tbody>
-    </table>
-  </main>
-
-  <script src="script.js"></script>
+    <img src="sly.gif" class="splash" alt="">
+    <script>
+        setTimeout(()=>{
+            window.location.href="index.html";
+        },2000)
+    </script>
 </body>
 </html>
