--- a/splash.html
+++ b/splash.html
@@ -14,7 +14,7 @@
       <div class="close-btn" id="close-btn">×</div>
       <nav>
         <ul>
-          <li><a href="index.html">Resumen</a></li>
+          <li><a href="splash.html">Resumen</a></li>
           <li><a href="depositos.html">Depósitos</a></li>
           <li><a href="solicitudes.html">Solicitudes</a></li>
           <li><a href="prestamos.html">Préstamos</a></li>
