--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="sly.gif" class="splash" alt="">
     <script>
         setTimeout(()=>{
-            window.location.href="index.html";
+            window.location.href="splash.html";
         },2000)
     </script>
 </body>
