--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
           <li><a href="solicitudes.html">Solicitudes</a></li>
           <li><a href="prestamos.html">Préstamos</a></li>
           <li><a href="calculadora.html">Calculadora</a></li>
-          <li><a href="documentacion.html">Documentacion</a></li>
+          <li><a href="documentacion.html">Documentación</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
       </nav>
     </div>
     <h1>Sly</h1>
-    <p></p>
   </header>
 
   <main>
-    <h2 class="a">Resumen</h2>
+    <h2 class="title">Resumen</h2>
     <table id="tabla-resumen">
       <thead>
         <tr>
@@ -46,6 +45,6 @@
     </table>
   </main>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
