--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sly - Inicio</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -19,17 +19,18 @@
           <li><a href="solicitudes.html">Solicitudes</a></li>
           <li><a href="prestamos.html">Préstamos</a></li>
           <li><a href="calculadora.html">Calculadora</a></li>
-          <li><a href="documentacion.html">Documentación</a></li>
+          <li><a href="documentacion.html">Documentacion</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
       </nav>
     </div>
     <h1>Sly</h1>
+    <p></p>
   </header>
 
   <main>
-    <h2 class="title">Resumen</h2>
+    <h2 class="a">Resumen</h2>
     <table id="tabla-resumen">
       <thead>
         <tr>
@@ -45,6 +46,6 @@
     </table>
   </main>
 
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
