--- a/index.html
+++ b/index.html
@@ -1,51 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sly - Inicio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Splash Screen</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="splash.css">
 </head>
 <body>
-  <header>
-    <div class="menu-toggle" id="menu-btn">☰</div>
-    <div class="sidebar" id="sidebar">
-      <div class="close-btn" id="close-btn">×</div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Resumen</a></li>
-          <li><a href="depositos.html">Depósitos</a></li>
-          <li><a href="solicitudes.html">Solicitudes</a></li>
-          <li><a href="prestamos.html">Préstamos</a></li>
-          <li><a href="calculadora.html">Calculadora</a></li>
-          <li><a href="documentacion.html">Documentacion</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-        </ul>
-      </nav>
+    <div class="splash-container">
+        <div class="background-svg">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" id="background-svg">
+                <circle class="circle" cx="150" cy="150" r="80" fill="#189"/>
+                <circle class="circle" cx="350" cy="350" r="100" fill="#48e"/>
+            </svg>
+        </div>
+        <div class="content">
+            <h1 class="main-title">SlyBank</h1>
+            <p class="sub-title">Innovación y seguridad en tu futuro financiero</p>
+            <div class="progress-bar-container">
+                <div class="progress-bar"></div>
+            </div>
+        </div>
     </div>
-    <h1>Sly</h1>
-    <p></p>
-  </header>
 
-  <main>
-    <h2 class="a">Resumen</h2>
-    <table id="tabla-resumen">
-      <thead>
-        <tr>
-          <th>Miembro</th>
-          <th>Capital</th>
-          <th>Interés</th>
-          <th>Total</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Los datos se llenarán automáticamente -->
-      </tbody>
-    </table>
-  </main>
-
-  <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
